This file contains the logs between consecutive releases
********************************************************
# Make last version consistent with CMakeLists.txt

Release 1.6.0
=============
- Fix loadData under windows ('\' was added in the URL)
- in Db::setLocator, if locatorIndex is set to -1, the new locator is ADDED to already existing ones.
- The library 'nlopt' is know used to perform optimization. At time, it should replace FOXLEG in the Automatic Structure Recognition (model_auto).
- The argument 'domain' has been added to API functions 'krigingSPDE', 'simulateSPDE' and 'logLikelihoddSPDE'. It allows specifying the extension of the domain covered by the SPDE meshing. If not defined, it is elaborated starting from argument 'dbin' and/or 'dbout'.
- ExtractDiag() of a PrecisionOp in Matrix-free version (test_PrecisionOp.py)
- Function areEqual() is renamed in isEqual()
- Functions isEqualExtended() are added to compare 2 scalar or 2 vectors
- R 4.4.2 support

Release 1.5.1
=============
- Fix old GLIBC compatibility under Ubuntu

Release 1.5.0
=============
- Gneiting covariance function has been added (with its test)
- New SpaceComposite class added (with its test)
- A method SpacePopint::spacePointOnSubspace has been added to project a
  point on a sub-space of a SpaceComposite (there is still Memory copies!)
- A sample index (in the Db) and a boolean (target) have been added to the SpacePoint members
- Adding the BASH version for files "compare_test" and "update_test" used to handle non-regression output files.
- Re-export acknoledge_gstlearn function in packages

Miscellaneous
-------------
- No more Leak in non-regression tests for Data
- Add the location of non-regression specific files if needed in compare_test and update_test

Release 1.4.1
=============
- Fix Zenodo configuration to restore DOI generation

Release 1.4.0
=============
- AMatrix: Correction in linearCombination (when processing Symmetric matrices and if this coincides with mat*)