@@ -4,6 +4,8 @@ This file contains the logs between consecutive releases
 
 Release 1.6.0
 =============
+- Add version in functions loadDoc and loadData (Python and R)
+- Fix loadData in R when trying to download the data file from the web (require 'lares' package)
 - Fix loadData under windows ('\' was added in the URL)
 - in Db::setLocator, if locatorIndex is set to -1, the new locator is ADDED to already existing ones.
 - The library 'nlopt' is know used to perform optimization. At time, it should replace FOXLEG in the Automatic Structure Recognition (model_auto).
